--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 jwt:
   authExpirationMs: 3600000
   refreshExpirationMs: 86400000
+  password-change-expiration-ms: 86400000
 
 server:
   port: 9002
@@ -16,3 +17,18 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+
+
+auth:
+  settings:
+    sign-in:
+      only-admins-can-create-users: true
+      require-admin-validation: false
+      require-email-validation: true
+      account-activation: none
+    user-role-endpoint:
+      enabled: true
+
+feign:
+  connection:
+    type: uri
