add identity(email, username) configuration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,6 +29,7 @@ auth:
       account-activation: none
     user-role-endpoint:
       enabled: true
+    identity: username
 
 feign:
   connection:
