--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
 
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
