--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,8 +22,7 @@ spring:
 eureka:
   client:
     enabled: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+
     fetch-registry: true
     register-with-eureka: true
 
@@ -57,3 +56,21 @@ kafka:
     #    trustStorePassword: ${server.ssl.truststorepassword}
     #    trustStoreType: ${server.ssl.truststoretype}
     enabled: false
+
+
+management:
+  health:
+    defaults:
+      enabled: false
+    mongo:
+      enabled: true
+  endpoint:
+    health:
+      show-details: always
+    metrics:
+      enabled: false
+  endpoints:
+    web:
+      base-path: /manage
+      exposure:
+        include: "health,info"
