--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
     <parent>
         <groupId>com.oxygensend</groupId>
         <artifactId>microservices-parent-pom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>auth</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>auth</name>
     <description>Authentication and authorization microservice</description>
 
     <properties>
-        <commons-jdk.version>1.0.0-SNAPSHOT</commons-jdk.version>
+        <commons-jdk.version>1.0.0</commons-jdk.version>
     </properties>
 
     <dependencies>
