add logback config

--- a/config/config-dev.yaml
+++ b/config/config-dev.yaml
@@ -3,6 +3,11 @@ spring:
     mongodb:
       uri: mongodb://localhost:27018/auth
 
+server:
+  tomcat:
+    accesslog:
+      enabled: false
+
 eureka:
   client:
     enabled: false
