--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,22 @@ services:
     image: mongo:latest
     ports:
       - "27017:27017"
+    command: ["--replSet", "rs0"]
     volumes:
       - ./mongo:/data/db
+    networks:
+      - auth
+  mongo-init:
+    image: mongo:latest
+    depends_on:
+      - mongo
+    entrypoint: >
+      bash -c "
+        echo 'Waiting for MongoDB to start...';
+        sleep 5;
+        mongosh --host mongo --eval 'rs.initiate({_id: \"rs0\", members: [{ _id: 0, host: \"mongo:27017\" }]})';
+        echo 'Replica set initialized';
+      "
     networks:
       - auth
 
@@ -15,9 +29,6 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-    #    volumes:
-    #      - ./kafka/zookeeper/data:/var/lib/zookeeper/data
-    #      - ./kafka/zookeeper/log:/var/lib/zookeeper/log
     ports:
       - 22181:2181
     networks:
@@ -36,8 +47,6 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    #    volumes:
-    #      - ./kafka/broker/data:/var/lib/kafka/data
     networks:
       - auth
 
