refactor: configure kafka broker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,6 +49,22 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     networks:
       - auth
+  kafka-ui:
+    container_name: auth-kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - "9000:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: dev-local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+      KAFKA_CLUSTERS_0_METRICS_PORT: 9997
+      DYNAMIC_CONFIG_ENABLED: true
+    depends_on:
+      - "kafka"
+    networks:
+      - auth
+
+
 
 networks:
   auth:
