--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
 #          cache: 'maven'
 #      - name: Run checkstyle
 #        id: checkstyle
-#        run: ./mvnw checkstyle:check
+#        run: mvn checkstyle:check
 #      - name: Create checkstyle report
 #        if: always()
 #        uses: jwgmeligmeyling/checkstyle-github-action@master
@@ -57,7 +57,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
       - name: Build with Maven
-        run: ./mvnw clean package package -DskipTests
+        run: mvn clean package package -DskipTests
   unit-test:
     runs-on: ubuntu-latest
     needs: build
@@ -88,7 +88,7 @@ jobs:
           cache: 'maven'
       - name: Run unit tests
         run: |
-          ./mvnw jacoco:prepare-agent surefire:test -Djacoco.destFile=jacocoResults/unit-tests-jacoco.exec
+          mvn jacoco:prepare-agent surefire:test -Djacoco.destFile=jacocoResults/unit-tests-jacoco.exec
       - name: Upload jacoco exec results
         uses: actions/upload-artifact@v4
         with:
@@ -124,7 +124,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
       - name: Run integration tests
-        run: ./mvnw jacoco:prepare-agent failsafe:integration-test failsafe:verify -Djacoco.destFile=jacocoResults/integration-tests-jacoco.exec
+        run: mvn jacoco:prepare-agent failsafe:integration-test failsafe:verify -Djacoco.destFile=jacocoResults/integration-tests-jacoco.exec
       - name: Upload jacoco exec results
         uses: actions/upload-artifact@v4
         with:
@@ -168,9 +168,9 @@ jobs:
           name: unit-tests-jacoco
           path: target/
       - name: merge results
-        run: ./mvnw jacoco:merge
+        run: mvn jacoco:merge
       - name: generate report
-        run: ./mvnw jacoco:report
+        run: mvn jacoco:report
       - name: Upload jacoco coverage report
         uses: actions/upload-artifact@v4
         with:
