--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,7 +57,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
       - name: Build with Maven
-        run: mvn clean package package -DskipTests
+        run: mvn clean package -DskipTests
   unit-test:
     runs-on: ubuntu-latest
     needs: build
