--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -89,11 +89,13 @@ jobs:
       - name: Run unit tests
         run: |
           mvn jacoco:prepare-agent surefire:test -Djacoco.destFile=jacocoResults/unit-tests-jacoco.exec
+      - name: List JaCoCo output
+        run: ls -R jacocoResults
       - name: Upload jacoco exec results
         uses: actions/upload-artifact@v4
         with:
           name: unit-tests-jacoco
-          path: target/unit-tests-jacoco.exec
+          path: jacocoResults/unit-tests-jacoco.exec
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -129,7 +131,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: integration-tests-jacoco
-          path: target/integration-tests-jacoco.exec
+          path: jacocoResults/integration-tests-jacoco.exec
 
   generate-jacoco-report:
     runs-on: ubuntu-latest
