--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -88,7 +88,7 @@ jobs:
           cache: 'maven'
       - name: Run unit tests
         run: |
-          mvn jacoco:prepare-agent surefire:test -Djacoco.destFile=jacocoResults/unit-tests-jacoco.exec
+          mvn test
       - name: List JaCoCo output
         run: ls -R jacocoResults
       - name: Upload jacoco exec results
