--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -93,7 +93,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: unit-tests-jacoco
-          path: jacocoResults/unit-tests-jacoco.exec
+          path: target/unit-tests-jacoco.exec
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -129,7 +129,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: integration-tests-jacoco
-          path: jacocoResults/integration-tests-jacoco.exec
+          path: target/integration-tests-jacoco.exec
 
   generate-jacoco-report:
     runs-on: ubuntu-latest
@@ -168,7 +168,8 @@ jobs:
           name: unit-tests-jacoco
           path: target/
       - name: merge results
-        run: mvn jacoco:merge
+        run: |
+          mvn jacoco:merge@merge-exec-files
       - name: generate report
         run: mvn jacoco:report
       - name: Upload jacoco coverage report
