--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>Authentication and authorization microservice</description>
 
     <properties>
+        <skipJacoco>false</skipJacoco>
         <skipTests>false</skipTests>
         <skipUnitTests>${skipTests}</skipUnitTests>
         <skipIntegrationTests>${skipTests}</skipIntegrationTests>
@@ -220,7 +221,8 @@
                         </goals>
                         <phase>initialize</phase>
                         <configuration>
-                            <destFile>${project.basedir}/jacocoResults/unit-tests-jacoco.exec</destFile>
+                            <skip>${skipUnitTests}</skip>
+                            <destFile>${project.build.directory}/unit-tests-jacoco.exec</destFile>
                         </configuration>
                     </execution>
 
@@ -231,17 +233,38 @@
                         </goals>
                         <phase>pre-integration-test</phase>
                         <configuration>
-                            <destFile>${project.basedir}/jacocoResults/integration-tests-jacoco.exec</destFile>
+                            <destFile>${project.build.directory}/integration-tests-jacoco.exec</destFile>
                         </configuration>
                     </execution>
 
+                    <execution>
+                        <id>merge-exec-files</id>
+                        <goals>
+                            <goal>merge</goal>
+                        </goals>
+                        <phase>verify</phase>
+                        <configuration>
+                            <skip>${skipJacoco}</skip>
+                            <fileSets>
+                                <fileSet>
+                                    <directory>${project.build.directory}</directory>
+                                    <includes>
+                                        <include>*.exec</include>
+                                    </includes>
+                                </fileSet>
+                            </fileSets>
+                        </configuration>
+                    </execution>
 
                     <execution>
                         <id>report</id>
-                        <phase>compile</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <skip>${skipJacoco}</skip>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
