chore: refactor admin role handling and update security annotations

--- a/config/config-dev.yaml
+++ b/config/config-dev.yaml
@@ -24,10 +24,11 @@ auth:
   settings:
     sign-in:
       account-activation: VERIFY_EMAIL
+    admin-roles:
+      - ROLE_ADMIN
     roles:
       - ROLE_DEVELOPER
       - ROLE_PRINCIPLE
-      - ROLE_ADMIN
       - ROLE_EDITOR
 
 
