--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,7 +57,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn clean package -DskipTests -Pall
   unit-test:
     runs-on: ubuntu-latest
     needs: build
@@ -88,7 +88,7 @@ jobs:
           cache: 'maven'
       - name: Run unit tests
         run: |
-          mvn test
+          mvn test -Pall
       - name: Upload jacoco exec results
         uses: actions/upload-artifact@v4
         with:
@@ -124,7 +124,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
       - name: Run integration tests
-        run: mvn verify -DskipUnitTests
+        run: mvn verify -DskipUnitTests -Pall
       - name: Upload jacoco exec results
         uses: actions/upload-artifact@v4
         with:
