--- a/auth-app/pom.xml
+++ b/auth-app/pom.xml
@@ -7,7 +7,7 @@
         <version>2.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>auth-app</artifactId>
-    <name>auth-rest Maven Webapp</name>
+    <name>auth-app</name>
 
     <properties>
         <spring-cloud-dependencies.version>2024.0.1</spring-cloud-dependencies.version>
