--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>auth-core</module>
         <module>auth-app</module>
+        <module>coverage</module>
     </modules>
 
     <properties>
@@ -47,6 +48,7 @@
                 <module>auth-mongodb</module>
                 <module>auth-mysql</module>
                 <module>auth-kafka</module>
+                <module>coverage</module>
             </modules>
         </profile>
         <profile>
@@ -134,35 +136,6 @@
                         </configuration>
                     </execution>
 
-                    <execution>
-                        <id>merge-exec-files</id>
-                        <goals>
-                            <goal>merge</goal>
-                        </goals>
-                        <phase>verify</phase>
-                        <configuration>
-                            <skip>${skipJacoco}</skip>
-                            <fileSets>
-                                <fileSet>
-                                    <directory>${project.build.directory}</directory>
-                                    <includes>
-                                        <include>*.exec</include>
-                                    </includes>
-                                </fileSet>
-                            </fileSets>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>report</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                            <skip>${skipJacoco}</skip>
-                        </configuration>
-                    </execution>
                 </executions>
             </plugin>
             <plugin>
