--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,13 +66,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch }}
-      - name: Restore Build
-        uses: actions/cache@v4
-        with:
-          path: target/
-          key: ${{ runner.os }}-build-${{ github.sha }}-${{ hashFiles('**') }}
-          restore-keys: |
-            ${{ runner.os }}-build
       - name: Cache Maven Packages
         uses: actions/cache@v4
         with:
@@ -88,12 +81,12 @@ jobs:
           cache: 'maven'
       - name: Run unit tests
         run: |
-          mvn test -Pall
+          mvn test -Pall -DskipJacocoReport
       - name: Upload jacoco exec results
         uses: actions/upload-artifact@v4
         with:
           name: unit-tests-jacoco
-          path: target/unit-tests-jacoco.exec
+          path: 'coverage/target/*-unit-tests-jacoco.exec'
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -103,13 +96,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch }}
-      - name: Restore Build
-        uses: actions/cache@v4
-        with:
-          path: target/
-          key: ${{ runner.os }}-build-${{ github.sha }}-${{hashFiles('**')}}
-          restore-keys: |
-            ${{ runner.os }}-build
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -124,12 +110,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
       - name: Run integration tests
-        run: mvn verify -DskipUnitTests -Pall
+        run: mvn verify -DskipUnitTests -DskipJacocoReport -Pall
       - name: Upload jacoco exec results
         uses: actions/upload-artifact@v4
         with:
           name: integration-tests-jacoco
-          path: target/integration-tests-jacoco.exec
+          path: 'coverage/target/*-integration-tests-jacoco.exec'
 
   generate-jacoco-report:
     runs-on: ubuntu-latest
@@ -145,13 +131,6 @@ jobs:
           java-version: '21'
           distribution: 'corretto'
           cache: 'maven'
-      - name: Restore Build
-        uses: actions/cache@v4
-        with:
-          path: target/
-          key: ${{ runner.os }}-build-${{ github.sha }}-${{ hashFiles('**') }}
-          restore-keys: |
-            ${{ runner.os }}-build
       - name: Restore Maven Packages
         uses: actions/cache@v4
         with:
@@ -162,27 +141,25 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: integration-tests-jacoco
-          path: target/
+          path: coverage/target
       - uses: actions/download-artifact@v4
         with:
           name: unit-tests-jacoco
-          path: target/
-      - name: merge results
-        run: |
-          mvn jacoco:merge@merge-exec-files
+          path: coverage/target
       - name: generate report
-        run: mvn jacoco:report
+        run: |
+          mvn jacoco:report-aggregate@jacoco-site-aggregate -Pall
       - name: Upload jacoco coverage report
         uses: actions/upload-artifact@v4
         with:
           name: JaCoCo coverage result
-          path: target/site/jacoco/
+          path: coverage/target/site/jacoco-aggregate/
           retention-days: 14
       - name: Generate JaCoCo Badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
         with:
-          jacoco-csv-file: ./target/site/jacoco/jacoco.csv
+          jacoco-csv-file: ./coverage/target/site/jacoco-aggregate/jacoco.csv
           generate-coverage-badge: true
           generate-branches-badge: true
       - name: Log coverage percentage
