refactor: remove redundant spring-boot-starter-test dependencies from pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
         <module>coverage</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <properties>
         <skipJacocoReport>false</skipJacocoReport>
         <skipTests>false</skipTests>
