refactor: simplify configuration by modularizing YAML files and removing unused settings

--- a/auth-app/src/main/resources/application.yaml
+++ b/auth-app/src/main/resources/application.yaml
@@ -1,12 +1,3 @@
-security:
-  token:
-    expiration:
-      access: 3600s
-      refresh: 86400s
-      password-reset: 2d
-      email-verification: 5d
-
-
 server:
   port: 9002
   tomcat:
@@ -17,85 +8,21 @@ server:
 spring:
   application:
     name: auth-service
-  profiles:
-    active: mongo
   threads:
     virtual:
       enabled: true
-  data:
-    mongodb:
-      auto-index-creation: true
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-  liquibase:
-    change-log: classpath:db/changelog/db.changelog-master.xml
-    #    driver-class-name: com.mysql.cj.jdbc.DriveR
-    enabled: true
-
-
-
+  config:
+    import:
+      - "auth-core.yaml"
+      - "optional:auth-kafka.yaml"
+      - "optional:auth-mongodb.yaml"
+      - "optional:auth-mysql.yaml"
 
 eureka:
   client:
     enabled: true
-
     fetch-registry: true
     register-with-eureka: true
-
-
-auth:
-  settings:
-    sign-in:
-      only-admins-can-create-users: true
-      require-admin-validation: false
-      require-email-validation: true
-      account-activation: none
-    roles:
-      - ROLE_USER
-      - ROLE_ADMIN
-    event-broker: internal
-    login-type: email
-
-kafka:
-  producer:
-    securityProtocol: SASL_SSL
-    saslMechanism: SCRAM-SHA-512
-    retry-backoff-in-ms: 100
-    retries: 5
-    ssl:
-      #    keyStore: ${server.ssl.keystore}
-      #    keyStoreType: ${server.ssl.keystoretype}
-      #    keyStorePassword: ${server.ssl.keystorepassword}
-      #    keyPassword: ${server.ssl.keypassword}
-      #    trustStore: ${server.ssl.truststore}
-      #    trustStorePassword: ${server.ssl.truststorepassword}
-      #    trustStoreType: ${server.ssl.truststoretype}
-      enabled: false
-  consumer:
-    consumer-number: 1
-    securityProtocol: SASL_SSL
-    saslMechanism: SCRAM-SHA-512
-    max-poll-records: 10000
-    max-poll-interval-ms: 30000
-    request-timeout-ms: 11000
-    connections-max-idle-ms: 240000
-    pool-timeout-ms: 1000
-    auto-offset-reset: earliest
-    ssl:
-      enabled: false
-    retry:
-      max-retries: 5
-      back-off-period: 500
-      backoff-period-service-unavailable: 5000
-    retry-backoff-ms: 1000
-
 
 management:
   health:
