--- a/auth-app/pom.xml
+++ b/auth-app/pom.xml
@@ -104,6 +104,16 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>oauth-google</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.oxygensend.auth</groupId>
+                    <artifactId>auth-oauth-google</artifactId>
+                    <version>2.0.0-SNAPSHOT</version>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
 
     <build>
