--- a/auth-oauth-google/src/main/resources/application.yaml
+++ b/auth-oauth-google/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ spring:
       client:
         registration:
           google:
+            scope: profile, email
+            redirect-uri: "{baseUrl}/login/oauth2/code/google"
 auth:
   oauth:
     google:
