feat: fix tests

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>auth-app</module>
         <module>coverage</module>
         <module>auth-oauth-google</module>
+        <module>auth-mongodb</module>
+        <module>auth-mysql</module>
     </modules>
 
     <dependencies>
